--- a/index.html
+++ b/index.html
@@ -82,98 +82,7 @@
             <div id="races-when"></div>
         </div>
         <div class="grid-item" style="background-color: green">
-            <div id="dnf">
-                <style>
-                    #chart {
-                        max-width: 100%;
-                        overflow: auto;
-                    }
-
-                    text {
-                        pointer-events: none;
-                    }
-
-                    .grandparent text {
-                        font-weight: bold;
-                        font-family: "sans-serif";
-                        font-size: 20px;
-                    }
-
-                    rect {
-                        stroke: #fff;
-                        stroke-width: 1px;
-                    }
-
-                    rect.parent,
-                    .grandparent rect {
-                        stroke-width: 2px;
-                    }
-
-                    .grandparent:hover rect {
-                        fill: darkgrey;
-                    }
-
-                    .children rect.parent,
-                    .grandparent rect {
-                        cursor: pointer;
-                    }
-
-                    .children rect.child {
-                        opacity: 0;
-                    }
-
-                    .children:hover rect.child {
-                        opacity: 1;
-                        stroke-width: 1px;
-                    }
-
-                    .children:hover rect.parent {
-                        opacity: 0;
-                    }
-
-                    .legend {
-                        margin-bottom: 8px !important;
-                    }
-
-                    .legend rect {
-                        stroke-width: 0px;
-                    }
-
-                    .legend text {
-                        text-anchor: middle;
-                        pointer-events: auto;
-                        font-size: 15px;
-                        font-family: "sans-serif";
-                        fill: black;
-                    }
-
-                    .form-group {
-                        text-align: left;
-                    }
-
-                    .textdiv {
-                        font-family: "sans-serif";
-                        font-size: 14px;
-                        padding: 6px;
-                        cursor: pointer;
-                        overflow: none;
-                    }
-
-                    .textdiv .title {
-                        font-size: 102%;
-                        font-weight: bold;
-                        margin-top: 4px;
-                        font-size: 16px;
-                    }
-
-                    .textdiv p {
-                        line-height: 13px;
-                        margin: 0 0 4px;
-                        padding: 0px;
-                        font-size: 15px;
-                    }
-                </style>
-            </div>
+            <div id="dnf"></div>
         </div>
     </div>
 </body>
