--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
                     <div id="safety_stackedbarchart"></div>
                 </div>
                 <div>
-                    <span
-                        >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span
-                    >
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     <button id="btn-p1-p2">P1 - P2</button>
                     <button id="btn-p2-p3">P2 - P3</button>
                     <button id="btn-p1-last">P1 - Last</button>
