--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="d3.v7.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/year-picker.js"></script>
     <script src="js/safety-2.js"></script>
     <script src="js/field-spread-2.js"></script>
     <script src="js/overtakes.js"></script>
@@ -38,6 +39,7 @@
         <div id="current-races-count">
             Number of races in your selection: . Races are between:
         </div>
+        <div id="year-picker"></div>
     </div>
   </div>
 
