Fix layout bugs

--- a/index.html
+++ b/index.html
@@ -30,23 +30,26 @@
 </head>
 
 <body>
-  <div id="sticky-header">
-    <div id="header-container">
-        <div style="width: 80%">
-            <div id="slider-container"></div>
-        </div>
-        <div id="range-label"></div>
-        <div id="year-picker"></div>
-        <div id="current-races-count">
-            Number of races in your selection: . Races are between:
+    <div id="sticky-header">
+        <div id="header-container">
+            <div style="width: 80%">
+                <div id="slider-container"></div>
+            </div>
+            <div id="range-label"></div>
+            <div id="year-picker"></div>
+            <div id="current-races-count">
+                Number of races in your selection: . Races are between:
+            </div>
         </div>
     </div>
-  </div>
 
-    <div id="warning">There are no races in your selection! Please select a bigger ratings interval!</div>
+    <div id="warning">
+        There are no races in your selection! Please select a bigger ratings
+        interval!
+    </div>
 
     <div id="main-container">
-        <div style="text-align: center;">
+        <div style="text-align: center; margin-top: 70px">
             <div id="track_location"></div>
         </div>
         <div class="grid-container">
@@ -55,7 +58,7 @@
                     <div id="safety_stackedbarchart"></div>
                 </div>
                 <div>
-                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <button id="btn-p1-p2">P1 - P2</button>
                     <button id="btn-p2-p3">P2 - P3</button>
                     <button id="btn-p1-last">P1 - Last</button>
@@ -70,12 +73,12 @@
                     <div id="tooltip"></div>
                 </div>
             </div>
-        </div>
+
             <div class="row-container">
                 <div id="pie-chart">
-                  <div id="tire-types"></div>
-                  <div id="pie-legend"></div>
-              </div>
+                    <div id="tire-types"></div>
+                    <div id="pie-legend"></div>
+                </div>
                 <div id="winner-champ-pos"></div>
             </div>
             <div class="row-container">
