--- a/index.html
+++ b/index.html
@@ -57,27 +57,28 @@
                 <div>
                     <div id="safety_stackedbarchart"></div>
                 </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <button id="btn-p1-p2">P1 - P2</button>
-                    <button id="btn-p2-p3">P2 - P3</button>
-                    <button id="btn-p1-last">P1 - Last</button>
-                    <div id="time_diffs"></div>
-                </div>
-            </div>
-            <div class="row-container">
                 <div id="overtakes">
                     <div id="tooltip"></div>
                 </div>
+            </div>
+            <div class="row-container">
                 <div id="pitstops">
                     <div id="tooltip"></div>
+                </div>
+                <div id="pie-chart">
+                    <div id="tire-types"></div>
+                    <div id="pie-legend"></div>
                 </div>
             </div>
 
             <div class="row-container">
-                <div id="pie-chart">
-                    <div id="tire-types"></div>
-                    <div id="pie-legend"></div>
+                <div id="time_diffs-container">
+                    <div id="buttons-container">
+                        <button id="btn-p1-p2">P1 - P2</button>
+                        <button id="btn-p2-p3">P2 - P3</button>
+                        <button id="btn-p1-last">P1 - Last</button>
+                    </div>
+                    <div id="time_diffs"></div>
                 </div>
                 <div id="winner-champ-pos"></div>
             </div>
