--- a/index_jesper.html
+++ b/index_jesper.html
@@ -482,6 +482,7 @@
             // root.children[1].children[3].children[9].value += +d.SomeOtherProperty;
         });
         
+        console.log(root);
         initialize(root);
         accumulate(root);
         layout(root);
