--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <script src="js/slider.js"></script>
     <script src="js/script.js"></script>
     <script src="js/year-picker.js"></script>
-    <script src="js/safety-2.js"></script>
-    <script src="js/field-spread-2.js"></script>
+    <script src="js/safety.js"></script>
+    <script src="js/field-spread.js"></script>
     <script src="js/overtakes.js"></script>
     <script src="js/pitstops.js"></script>
     <script src="js/tire-types.js"></script>
