--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         d3v3 = d3;
         window.d3 = null;
     </script>
-    <script src="d3.v7.js"></script>
+    <script src="js/d3.v7.min.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/script.js"></script>
     <script src="js/year-picker.js"></script>
